--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ethan's Potfolio Project</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
 </head>
@@ -19,7 +19,7 @@
 
   <!-- Header section -->
 
-  <header>
+  <header class="header">
     <h1>Ethan's Portfolio</h1>
     <nav>
       <ul>
@@ -54,6 +54,20 @@
   </main>
 
   <footer>
+    <div class="contact-table">
+      <a href="https://github.com/your-github-username" target="_blank" aria-label="GitHub">
+        <i class="fab fa-github"></i> GitHub
+      </a>
+      <a href="https://linkedin.com/in/your-linkedin-username" target="_blank" aria-label="LinkedIn">
+        <i class="fab fa-linkedin"></i> LinkedIn
+      </a>
+      <a href="mailto:ethan@example.com" aria-label="Email">
+        <i class="fas fa-envelope"></i> ethan@example.com
+      </a>
+      <a href="tel:+1234567890" aria-label="Phone">
+        <i class="fas fa-phone"></i> +1 (234) 567-890
+      </a>
+    </div>
     <p>&copy; 2023 Ethan's Portfolio</p>
   </footer>
 
