--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
-<!-- Ethan's Portfolio Project -->
-<!-- This is a simple HTML template for Ethan's portfolio project. -->
-<!-- The template includes a header, main content sections, and a footer. -->
+<!--
+# Ethan's Portfolio Project
+A simple HTML template for Ethan's portfolio.
+-->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ethan's Potfolio Project</title>
+  <title>Ethan's Portfolio Project</title>
+  <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  
+  <!-- Inter font for modern look -->
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@400;700;800&display=swap" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
-<!-- webpage content -->
-
 <body>
-
-  <!-- Header section -->
-
+  <!--
+  ## Header
+  Contains site title and navigation links
+  -->
   <header class="header">
-    <h1>Ethan's Portfolio</h1>
+    <h1>PORTFOLIO</h1>
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
@@ -30,12 +33,19 @@
     </nav>
   </header>
 
-  <!-- Main content section -->
-
+  <!--
+  ## Main Content
+  About, Projects, and Contact sections
+  -->
   <main>
-
-    <!-- About section -->
-    <!-- This section provides information about myself -->
+    <section class="hero">
+      <div class="heroimage">
+        <img src="EthansImage.jpeg" alt="Ethan's photo" class ="heroImage">
+      </div>
+      <div class="herotext">
+        <h1>Ethan Sheridan-Smith</h1>
+        <p>Welcome to my portfolio! I create beautiful and functional websites.</p>
+    </section>
 
     <section id="about">
       <h2>About Me</h2>
@@ -49,27 +59,30 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email me at <a href="mailto:ethan@example.com">ethan@example.com</a></p>
-    </section>    
+      <p>Email me at <a href="mailto:ethanventonsheridansmith@gmail.com">ethanventonsheridansmith@gmail.com</a></p>
+    </section>
   </main>
 
+  <!--
+  ## Footer
+  Contact links and copyright
+  -->
   <footer>
     <div class="contact-table">
-      <a href="https://github.com/your-github-username" target="_blank" aria-label="GitHub">
+      <a href="https://github.com/ethansheridansmith" target="_blank" aria-label="GitHub">
         <i class="fab fa-github"></i> GitHub
       </a>
-      <a href="https://linkedin.com/in/your-linkedin-username" target="_blank" aria-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/ethan-sheridan-smith/" target="_blank" aria-label="LinkedIn">
         <i class="fab fa-linkedin"></i> LinkedIn
       </a>
-      <a href="mailto:ethan@example.com" aria-label="Email">
-        <i class="fas fa-envelope"></i> ethan@example.com
+      <a href="mailto:ethanventonsheridansmith@gmail.com" aria-label="Email">
+        <i class="fas fa-envelope"></i> ethanventonsheridansmith@gmail.com
       </a>
-      <a href="tel:+1234567890" aria-label="Phone">
-        <i class="fas fa-phone"></i> +1 (234) 567-890
+      <a href="tel:+447593888839" aria-label="Phone">
+        <i class="fas fa-phone"></i> (+44) 7593 888839
       </a>
     </div>
-    <p>&copy; 2023 Ethan's Portfolio</p>
+    <p>&copy; 2025 Ethan's Portfolio</p>
   </footer>
-
 </body>
 </html>
