--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -36,7 +37,7 @@
           <p>I specialise in diagnostics, connectivity, and serviceability for embedded and connected products. I’m passionate about using technology to enhance repair strategies, streamline global service operations, and build intelligent, user-focused tools.</p>
         </div>
         <div class="heroimage">
-          <img src="Images/EthansImage.jpeg" alt="Ethan's photo" class="hero-img" />
+          <img src="assets/images/EthansImage.jpeg" alt="Ethan's photo" class="hero-img" />
         </div>
       </section>
 
@@ -58,6 +59,34 @@
           <li>Collaborated with international teams across Software, Design, and QA to deliver robust service tooling.</li>
           <li>Led machine learning projects using TensorFlow and Keras, including CNNs for diagnostic solutions.</li>
         </ul>
+      </section>
+
+      <!-- Projects Section -->
+      <section id="projects">
+        <h2>Selected Projects</h2>
+        <div class="project-list">
+          <div class="project-card">
+            <h3>ML API for Employee Attrition</h3>
+            <p>Developed a REST API with Flask to serve an ML model predicting employee attrition. Containerized with Docker and deployed on Heroku.</p>
+            <a href="#">View Case Study →</a>
+          </div>
+
+          <div class="project-card">
+            <h3>Diagnostic Tooling Framework</h3>
+            <p>Internal project at Dyson to standardize and streamline diagnostic tool integration across product lines.</p>
+            <a href="#">More Coming Soon</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Resume -->
+
+      <!-- Contact Section -->
+      <section id="contact">
+        <h2>Resume</h2>
+        <p>
+          <a href="assets/Resume/Ethan-V-Sheridan-Smith-CV.pdf" download>Download CV</a>
+        </p>
       </section>
 
       <!-- Contact Section -->
