Changed image assets and updated index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <p>I specialise in diagnostics, connectivity, and serviceability for embedded and connected products. I’m passionate about using technology to enhance repair strategies, streamline global service operations, and build intelligent, user-focused tools.</p>
         </div>
         <div class="heroimage">
-          <img src="assets/images/LightMode.png" alt="Ethan's photo" class="hero-img" />
+          <img src="assets/images/EthansImage.jpeg" alt="Ethan's photo" class="hero-img" />
         </div>
       </section>
 
