--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Fonts & Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -82,7 +82,7 @@
       <!-- Resume -->
 
       <!-- Contact Section -->
-      <section id="contact">
+      <section id="Resume">
         <h2>Resume</h2>
         <p>
           <a href="assets/Resume/Ethan-V-Sheridan-Smith-CV.pdf" download>Download CV</a>
