commiting these as they are not ready for main branch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="projects/MLProject.html">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -32,8 +32,8 @@
       <!-- Hero Section -->
       <section class="hero">
         <div class="herotext">
-          <h2>Service Design Connectivity Engineer</h2>
-          <p class="location">(Bristol, UK)</p>
+          <h2>Service Design Connectivity Engineer @ Dyson</h2>
+          <p class="location">(Malmesbury, UK)</p>
           <p>I specialise in diagnostics, connectivity, and serviceability for embedded and connected products. I’m passionate about using technology to enhance repair strategies, streamline global service operations, and build intelligent, user-focused tools.</p>
         </div>
         <div class="heroimage">
@@ -68,7 +68,8 @@
           <div class="project-card">
             <h3>ML API for Employee Attrition</h3>
             <p>Developed a REST API with Flask to serve an ML model predicting employee attrition. Containerized with Docker and deployed on Heroku.</p>
-            <a href="#">View Case Study →</a>
+            <a href="projects/MLProject.html">View Case Study →</a>
+
           </div>
 
           <div class="project-card">
