Some slight style changes to the About page !

--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
         </div>
       </section>
 
-      <!-- Resume -->
-
-      <!-- Contact Section -->
+      <!-- Resumem Section -->
       <section id="Resume">
         <h2>Resume</h2>
         <p>
