Reformatted links adn removed my number cause wierd

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <li><a href="#experience"><i class="fas fa-briefcase"></i> Experience</a></li>
           <li><a href="#projects"><i class="fas fa-folder-open"></i> Projects</a></li>
           <li><a href="#resume"><i class="fas fa-download"></i> Resume</a></li>
+          <li><a href="https://github.com/ethansheridansmith" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i> Github</a></li>
+          <li><a href="https://www.linkedin.com/in/ethan-sheridan-smith/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i> Linkedin</a></li>
+          <li><a href="mailto:ethanventonsheridansmith@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i> Email</a></li>      
         </ul>
       </nav>
     </header>
@@ -31,7 +34,7 @@
     <main>
 
       <!-- ===== Hero Section ===== -->
-      <section class="hero">
+      <section id="hero" class="hero">
         <div class="herotext">
           <h2>Service Design Connectivity Engineer</h2>
           <p class="location">(Bristol, UK)</p>
@@ -83,10 +86,10 @@
       </section>
 
       <!-- ===== Resume Section ===== -->
-      <section id="resume" style="text-align: center; padding-top: 60px;">
+      <section id="resume" class="left-section">
         <h2>Resume</h2>
         <a href="assets/Resume/Ethan-V-Sheridan-Smith-CV.pdf" download class="download-btn">
-          <i class="fas fa-download"></i> Download My CV
+          <i class="fas fa-download"></i> Download My up to date Resume
         </a>
       </section>
     </main>
@@ -102,9 +105,6 @@
         </a>
         <a href="mailto:ethanventonsheridansmith@gmail.com" aria-label="Email">
           <i class="fas fa-envelope"></i> Email
-        </a>
-        <a href="tel:+447593888839" aria-label="Phone">
-          <i class="fas fa-phone"></i> (+44) 7593 888839
         </a>
       </div>
       <p>&copy; 2025 Ethan Sheridan-Smith</p>
